# charon

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  TODO.md  charon.opam  doc-ml.html  dune-project  flake.nix  name_matcher_parser.opam  rust-toolchain  rust-toolchain.template  vtables
charon/: AGENTS.md  Cargo.toml  Charon.toml  Makefile  rust-toolchain
charon-ml/: .ocamlformat  Expressions.ml  GAst.ml  GAstOfJson.ml  GAstUtils.ml  Identifiers.ml  LlbcAst.ml  LlbcAstUtils.ml  LlbcOfJson.ml  Logging.ml  Makefile  Print.ml  PrintExpressions.ml  PrintLlbcAst.ml  PrintPrimitiveValues.ml  PrintTypes.ml  PrintUllbcAst.ml  PrintUtils.ml  Scalars.ml  Types.ml  TypesUtils.ml  UllbcAst.ml  UllbcAstUtils.ml  UllbcOfJson.ml  Utils.ml  charon.opam  dune  dune-project  name_matcher_parser.opam
charon-ml/name_matcher_parser/: Ast.ml  Interface.ml  Lexer.mll  Parser.mly  dune
charon-ml/src/: BigInt.ml  CharonVersion.ml  Collections.ml  Expressions.ml  ExpressionsUtils.ml  GAst.ml  GAstOfJson.ml  GAstUtils.ml  Identifiers.ml  LlbcAst.ml  LlbcAstUtils.ml  LlbcOfJson.ml  Logging.ml  Meta.ml  MetaUtils.ml  NameMatcher.ml  Names.ml  OfJson.ml  OfJsonBasic.ml  OfPostcard.ml  OfPostcardBasic.ml  PrimitiveValues.ml  PrimitiveValuesUtils.ml  Print.ml  PrintExpressions.ml  PrintFmt.ml  PrintGAst.ml  PrintLlbcAst.ml  PrintPrimitiveValues.ml  PrintTypes.ml  PrintUllbcAst.ml  PrintUtils.ml  PrintValues.ml  Scalars.ml  StringUtils.ml  Substitute.ml  Types.ml  TypesUtils.ml  UllbcAst.ml  UllbcOfJson.ml  (+4 more)
charon-ml/tests/: Test_Deserialize.ml  Test_NameMatcher.ml  Tests.ml  Tests_Cmd.ml  dune  test_deserialize.ml
charon-ml/tests/test-outputs/: dune
charon/adt-into/: Cargo.toml
charon/adt-into/src/: lib.rs
charon/attributes/: Cargo.toml  README.md
charon/attributes/src/: lib.rs
charon/examples/: loops.rs  nested_borrows.rs  no_nested_borrows.rs
charon/hax-frontend/: Cargo.toml
charon/hax-frontend/options/: Cargo.toml
charon/hax-frontend/src/: body.rs  comments.rs  constant_utils.rs  id_table.rs  index_vec.rs  lib.rs  prelude.rs  rustc_utils.rs  sinto.rs  state.rs  traits.rs
charon/macros/: Cargo.toml
charon/macros/src/: enum_helpers.rs  lib.rs  make_generic_in_borrows.rs
charon/rustc_trait_elaboration/: Cargo.toml
charon/rustc_trait_elaboration/src/: ctx.rs  elaboration.rs  item_ref.rs  lib.rs  predicates.rs  utils.rs
charon/src/: assumed.rs  cfim_ast.rs  cfim_ast_utils.rs  cfim_export.rs  charon-driver.rs  cli_options.rs  common.rs  deps_errors.rs  divergent.rs  driver.rs  errors.rs  export.rs  export_cfim.rs  expressions.rs  expressions_utils.rs  extract_constant_assignments.rs  extract_global_assignments.rs  formatter.rs  gast.rs  gast_utils.rs  generics.rs  get_mir.rs  graphs.rs  id_generator.rs  id_map.rs  id_vector.rs  ids.rs  im_ast.rs  im_ast_utils.rs  im_to_cfim.rs  im_to_llbc.rs  index_to_function_calls.rs  insert_assign_return_unit.rs  lib.rs  llbc_ast.rs  llbc_ast_utils.rs  llbc_export.rs  logger.rs  main.rs  meta.rs  (+39 more)
charon/src/ast/: assumed.rs  attributes.rs  builtins.rs  expressions.rs  expressions_utils.rs  gast.rs  gast_utils.rs  hash_cons.rs  krate.rs  layout_computer.rs  layout_guarantees.rs  llbc_ast.rs  llbc_ast_utils.rs  meta.rs  meta_utils.rs  mod.rs  names.rs  names_utils.rs  symbolic_layout.rs  types.rs  types_utils.rs  ullbc_ast.rs  ullbc_ast_utils.rs  values.rs  values_utils.rs  visitor.rs
charon/src/export/: multi_target.rs
charon/src/ids/: generator.rs  index_map.rs  index_vec.rs  map.rs  mod.rs  vector.rs
charon/src/name_matcher/: mod.rs  parser.rs
charon/src/pretty/: fmt_with_ctx.rs  formatter.rs  mod.rs
charon/src/transform/: check_generics.rs  compute_short_names.rs  compute_vtable_metadata.rs  ctx.rs  duplicate_defaulted_methods.rs  duplicate_return.rs  expand_associated_types.rs  filter_invisible_trait_impls.rs  filter_unreachable_blocks.rs  filter_useless_blocks.rs  generate_statement_ids.rs  graphs.rs  hide_allocator_param.rs  hide_marker_traits.rs  index_intermediate_assigns.rs  index_to_function_calls.rs  inline_local_panic_functions.rs  inline_promoted_consts.rs  insert_assign_return_unit.rs  insert_ptr_metadata.rs  insert_storage_lives.rs  lift_associated_item_clauses.rs  merge_goto_chains.rs  mod.rs  monomorphize.rs  ops_to_function_calls.rs  prettify_cfg.rs  reconstruct_asserts.rs  reconstruct_boxes.rs  recover_body_comments.rs  remove_arithmetic_overflow_checks.rs  remove_drop_never.rs  remove_dynamic_checks.rs  remove_nops.rs  remove_read_discriminant.rs  remove_unit_locals.rs  remove_unused_locals.rs  remove_unused_methods.rs  remove_unused_self_clause.rs  reorder_decls.rs  (+11 more)
charon/src/translate/: get_mir.rs  mod.rs  translate_constants.rs  translate_crate_to_ullbc.rs  translate_ctx.rs  translate_functions_to_ullbc.rs  translate_predicates.rs  translate_traits.rs  translate_types.rs
charon/tests/: cargo.rs  cli.rs  crate_data.rs  dst-meta-kinds.json  dynamic-sized-type-info.rs  generate-ml.rs  help-output.txt  layout.json  layout.rs  layout_guarantees.json  layouts_and_hints.json  multi_target_mwe.rs  no_nested_borrows.rs  no_nested_borrows_selection.rs  popular-crates.rs  ptr-metadata.json  test-rust-name-matcher.rs  test1.rs  test_borrows.rs  ui.rs  version.rs
charon/tests/cargo/: build-script.out  dependencies.out  error-dependencies.out  foreign-generic-closure.out  issue-1298-absolute-path-for-generated-files.out  issue-396-lib-bin.out  issue-412-dup-deps.out  multi-targets.out  private-dependency.out  toml-cargo-flags.out  toml-start-from.out  toml.out  unsafe_.out  workspace.out
charon/tests/generated-ml/: GAstOfJson.ml
charon/tests/src/: betree.rs  hashmap.rs  loops.rs  main.rs  no_nested_borrows.rs  paper.rs
charon/tests/ui/: advanced-const-generics.out  arrays.out  arrays.rs  arrays_const_generics.out  assert-kinds-reconstruct-fallible.out  assert-kinds.out  demo.out  (+265 more)
ml/: dune-project  llbc-lib.opam
ml/src/: ast.ml  collections.ml  dune  errors.ml  expressions.ml  identifiers.ml  json_helpers.ml  modules.ml  names.ml  of_json.ml  scalars.ml  types.ml  values.ml
ml/tests/: dune  e2e.ml
(+734 files in other folders)
