(lang dune 3.7)

(name charon)

(version 0.1)

(generate_opam_files true)

(source
 (uri git+https://github.com/AeneasVerif/charon.git))

(homepage "https://github.com/AeneasVerif/charon")

(bug_reports "https://github.com/AeneasVerif/charon/issues")

(authors
  "Son Ho"
  "Jonathan Protzenko"
  "Aymeric Fromherz"
  "Sidney Congard")

(license Apache-2.0)

(package
 (name charon)
 (synopsis "Manipulation of Low-level Borrow Calculus, a MIR-like representation for Rust Code")
 (description "
   This library allows for manipulation of LLBC, the language output by
   Charon. Charon acts as an interface between the rustc compiler and program
   verification projects.  Its purpose is to process Rust .rs files and convert
   them into files easy to handle by program verifiers."))
