[package]
name = "charon"
version = "0.1.0"
authors = ["Son Ho <hosonmarc@gmail.com>"]
edition = "2018"

[lib]
name = "charon_lib"
path = "src/lib.rs"

[[bin]]
name = "charon"
path = "src/main.rs"

[[bin]]
name = "charon-driver"
path = "src/charon-driver.rs"

[dependencies]
pretty = "0.10.0"
im = "15.1.0"
itertools = "0.10.5"
lazy_static = "1.4.0"
walkdir = "2.3.2"
heck = "0.3.3"
regex = "1.6.0"
serde_json = "1.0.87"
serde = { version = "1.0.145", features = ["derive"] }
toml = "0.5.9"
linked_hash_set = "0.1.4"
hashlink = "0.7.0"
log = "0.4.17"
env_logger = "0.8.4"
petgraph = "0.6.2"
multimap = "0.8.3"
serial_test = "0.5.1"
chrono = "0.4"
structopt = "0.3.26"
macros = { path = "./macros" }
take_mut = "0.2.2"
rustc_tools_util = "0.2.1"

[dev-dependencies]
assert_cmd = "1.0.8"

[package.metadata.rust-analyzer]
rustc_private=true
