[package]
name = "charon"
version = "0.1.3"
authors = ["Son Ho <hosonmarc@gmail.com>"]
edition = "2021"

[lib]
name = "charon_lib"
path = "src/lib.rs"

[[bin]]
# The main entrypoint. This is a wrapper that handles toolchain and cargo
# management and calls `charon-driver` for the real work.
name = "charon"
path = "src/main.rs"

[[bin]]
# The rustc driver. The resulting binary dynamically links to rust dylibs
# including `librustc_driver.so`. Do not call directly, call charon instead to
# let it set up the right paths.
name = "charon-driver"
path = "src/charon-driver.rs"

[dependencies]
backtrace = "0.3.69"
bumpalo = "3.11.1" # We constrain the version of [bumpalo] because of a vulnerability
clap = { version = "3.0", features = ["derive", "env"] }
colored = "2.0.4"
derivative = "2.2.0"
env_logger = "0.8.4"
hashlink = "0.7.0"
heck = "0.3.3"
im = "15.1.0"
index_vec = { version = "0.1.3", features = ["serde"] }
itertools = "0.10.5"
lazy_static = "1.4.0"
linked_hash_set = "0.1.4"
log = "0.4.17"
multimap = "0.8.3"
petgraph = "0.6.2"
pretty = "0.10.0"
regex = "1.7.1"
rustc_tools_util = "0.2.1"
serde_json = "1.0.91"
serde = { version = "1.0.152", features = ["derive"] }
serial_test = "0.5.1"
take_mut = "0.2.2"
toml = "0.5.10"
tracing-subscriber = { version = "0.3", features = [ "env-filter", "std", "fmt" ] }
tracing-tree = "^0.2"
tracing = { version = "0.1", features = [ "max_level_trace", "release_max_level_warn" ] }
walkdir = "2.3.2"
which = "6.0.1"

hax-frontend-exporter = { git = "https://github.com/hacspec/hax", branch = "main" }
hax-frontend-exporter-options = { git = "https://github.com/hacspec/hax", branch = "main" }
# hax-frontend-exporter = { path = "../../hacspec-v2/frontend/exporter" }
# hax-frontend-exporter-options = { path = "../../hacspec-v2/frontend/exporter/options" }
macros = { path = "./macros" }

[dev-dependencies]
anyhow = "1.0.81"
assert_cmd = "1.0.8"
ignore = "0.4"
indoc = "2"
libtest-mimic = "0.4"
snapbox = "0.3"
tempfile = "3"

[package.metadata.rust-analyzer]
rustc_private=true
