opam-version: "2.0"
name: "llbc-lib"
synopsis: """Manipulation of Low-level Borrow Calculus, a MIR-like representation for Rust Code"""
maintainer: ["Son Ho <son.ho@inria.fr>"]
authors: ["The Charon programmers"]
homepage: "https://github.com/AeneasVerif/charon"
dev-repo: "git+https://github.com/AeneasVerif/charon.git"
bug-reports: "https://github.com/dbuenzli/fmt/issues"
# license: ["NOLICENSE"]
tags: ["rust" "mir" "verification" "analysis"]
depends: [
  "ocaml" {>= "4.12.0"}
  "dune" {>= "3.0.0"}
  "visitors" {build}
  "ppx_deriving" {>= "5.2"}
  "zarith"
  "yojson"
]
build: ["dune" "build" "-p" name "-j" jobs]
description: """
This library allows for manipulation of LLBC, the language output by
Charon. Charon acts as an interface between the rustc compiler and
program verification projects.
Its purpose is to process Rust .rs files and convert them into
files easy to handle by program verifiers.
"""