(ocamllex Lexer)
(menhir
 (modules Parser)
 (flags --explain --inspection --table --dump))

(library
 (name name_matcher_parser)
 (public_name name_matcher_parser)
 (preprocess (pps ppx_deriving.show ppx_deriving.ord))
 (libraries zarith menhirLib)
 (flags
  ; menhir generates instances of the "unused rec flag" warning
  (:standard -w -39)))