(library
 (name charon) ;; The name as used in the project
 (public_name charon) ;; The name as revealed to the projects importing this library
 (preprocess
  (pps ppx_deriving.show ppx_deriving.ord visitors.ppx))
 (libraries yojson zarith easy_logging name_matcher_parser unionFind)
 (modules
  CharonVersion
  Collections
  Expressions
  ExpressionsUtils
  GAst
  GAstUtils
  GAstOfJson
  Identifiers
  LlbcAst
  LlbcAstUtils
  LlbcOfJson
  Logging
  Meta
  MetaUtils
  NameMatcher
  OfJsonBasic
  PrintExpressions
  PrintGAst
  PrintLlbcAst
  PrintUllbcAst
  PrintTypes
  PrintUtils
  PrintValues
  Scalars
  StringUtils
  Substitute
  Types
  TypesUtils
  UllbcAst
  UllbcAstUtils
  UllbcOfJson
  Utils
  Values
  ValuesUtils))

(documentation
 (package charon))

(env
 (_
  (flags
   :standard
   -safe-string
   -g
   ;-dsource
   -w
   -5@8-11-14-30-33-20-21-26-27-39)))
