[package]
name = "hax-frontend-exporter-options"
edition = "2024"
version = "0.3.5"
authors = ["hax Authors"]
license = "Apache-2.0"
homepage = "https://github.com/hacspec/hax"
description = "The options the `hax-frontend-exporter` crate is sensible to."

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
schemars = "0.8"
hax-adt-into = { path = "../adt-into", version = "=0.3.5" }
