[package]
name = "test-cargo-toml-cargo-flags"
version = "0.1.0"
edition = "2021"

[features]
my_feature = []

[package.metadata.charon.cargo]
# Tests that flags in this section are forwarded to `cargo build`.
# The feature below is not passed on the CLI; charon must supply it.
flags = ["--features", "my_feature"]
